--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,12 @@ services:
     volumes:
       - /app/node_modules
       - ./backend:/app
+    environment:
+      MYSQL_HOST: mysql
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: minleejae777
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306
   # mysql:
   #   build: ./mysql
   #   platform: linux/x86_64
