--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,37 @@
-version: "3"
+version: "2.4"
 services:
   frontend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./frontend
+    image: minleejae/docker-frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
+    mem_limit: 128m
+
   nginx:
     restart: always
-    build:
-      dockerfile: Dockerfile
-      context: ./nginx
+    image: minleejae/docker-nginx
     ports:
-      - "3000:80"
+      - "80:80"
+    mem_limit: 128m
+    links:
+      - frontend
+      - backend
+
   backend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./backend
+    image: minleejae/docker-backend
     container_name: app_backend
     volumes:
       - /app/node_modules
       - ./backend:/app
     environment:
-      MYSQL_HOST: mysql
+      MYSQL_HOST: docker-fullstack-mysql.c5oh7urliur4.us-east-1.rds.amazonaws.com
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: minleejae777
       MYSQL_DATABASE: myapp
       MYSQL_PORT: 3306
+    mem_limit: 128m
+
   # mysql:
   #   build: ./mysql
   #   platform: linux/x86_64
