--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,11 @@ services:
       - /app/node_modules
       - ./backend:/app
     environment:
-      MYSQL_HOST: docker-fullstack-mysql.c5oh7urliur4.us-east-1.rds.amazonaws.com
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: minleejae777
-      MYSQL_DATABASE: myapp
-      MYSQL_PORT: 3306
+      MYSQL_HOST: $MYSQL_HOST
+      MYSQL_USER: $MYSQL_USER
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
+      MYSQL_PORT: $MYSQL_PORT
     mem_limit: 128m
 
   # mysql:
